--- a/html-css.toboolist/css/style.css
+++ b/html-css.toboolist/css/style.css
@@ -34,11 +34,11 @@ button {
 
 li::marker {
     display: none;
-    content: ;
+    content: ‘’;
 }
 
 li::before {
-    content: \2713;
+    content: \2713’;
     color: green;
     border-radius: 20px;
     border: 1px solid green;
